ingress/ingress-ssl/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-ssl
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    secretName: color-web-secret
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: / 
        backend:
          service: 
            name: blue-svc
            port:
              number: 80
